# duckduckwho

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
api_connectors/ebird/: queries.py
models/: birds.py  get_local_position.py
visualisation/: nearby_birds_map.py
