[project]
name = "duckduckwho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "geocoder>=1.38.1",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "pre-commit>=4.5.1",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "rerun-sdk>=0.28.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
